Apache Tez Change Log
=====================

Release 0.3.0 - Unreleased

INCOMPATIBLE CHANGES
 
  TEZ-720. Inconsistency between VertexState and VertexStatus.State. 
 
  TEZ-41. Get VertexCommitter from API and remove MRVertexOutputCommitter.

  TEZ-650. MRHelpers.createMRInputPayloadWithGrouping() methods should not
  take an MRSplitsProto argument.

Release 0.2.0 - 2013-11-30

  First version.