@@ -51,6 +51,12 @@ public class TestOutput implements LogicalOutput {
   }
 
   @Override
+  public List<Event> start() {
+    // TODO TEZ-815 To be fixed in a subsequent jira if required.
+    return null;
+  }
+
+  @Override
   public Writer getWriter() throws Exception {
     return null;
   }
